# GUIMonkey

./: .gitignore  GUIMonkey.py  GUIMonkeyCore.py  GUIMonkeyUI.py  LICENSE  README.md  Steps.py  Timelines.py  build_ui.cmd  clo_test.py  main.py  pyautoguiclo_test.py  pyproject.toml  requirements.txt  usage_test.py
GUIMonkey/: GUIMonkeyCore.py  Steps.py  Timelines.py
GUIMonkey/ui/: GUIMonkeyUI.py  step_widgets.py  support_widgets.py
GUIMonkey/ui/views/: CreateTimelineDialog.py  CreateTimelineDialog.ui  GUIMonkeyMain.py  StepBase.py  StepBase.ui
lib/: logger.py
tests/: clo_test_usage_ref.py  notepad_typing.py  test_core.py  test_notepad_typing.py  usage_reference.py  usage_test.py
ui/: GUIMonkeyMain.py  step_widgets.py  support_widgets.py
ui/views/: CreateTimelineDialog.py  CreateTimelineDialog.ui  GUIMonkeyMain.py  GUIMonkeyMain.ui  StepBase.py  StepBase.ui
