[tool.black]
line-length=120

[tool.poetry]
name = "GUIMonkey"
version = "0.1.0"
description = ""
authors = ["Hugo Setyadji <setyadjih@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
PySide6 = ">=6.1.2"
PyAutoGUI = "^0.9.53"
opencv-python = "^4.5.2"
rich = "^10.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
